# pm-kanban-chatbot

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md
.claude/: ralph-loop.local.md
backend/: AGENTS.md  ai.py  auth.py  database.py  main.py  pyproject.toml
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_board.py  test_boards.py
docs/: DATABASE.md  code_review.md  schema.json
frontend/: next.config.ts  vitest.config.ts
frontend/src/app/: page.tsx
frontend/src/components/: AIChatSidebar.test.tsx  AIChatSidebar.tsx  BoardSelector.test.tsx  BoardSelector.tsx  CardDetailModal.test.tsx  CardDetailModal.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.test.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  LoginForm.test.tsx  LoginForm.tsx  NewCardForm.test.tsx  NewCardForm.tsx
frontend/src/lib/: api.test.ts  api.ts  auth.test.ts  auth.ts  kanban.test.ts  kanban.ts
frontend/src/test/: setup.ts
frontend/test-results/: .last-run.json
frontend/tests/: kanban.spec.ts
scripts/: start.bat  start.sh  stop.bat  stop.sh
static/: 404.html  __next.__PAGE__.txt  __next._head.txt  __next._tree.txt  _not-found.txt  index.html  index.txt
static/_next/static/chunks/: 0e8e94e7205e9098.css  f1302ee0e8b8cee7.js
static/_not-found/: __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
